; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_x509_time_test.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_x509_time_test.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_x509_cmp_time_current = common dso_local global i32 0, align 4
@test_x509_cmp_time = common dso_local global i32 0, align 4
@x509_cmp_tests = common dso_local global i32 0, align 4
@test_x509_time = common dso_local global i32 0, align 4
@x509_format_tests = common dso_local global i32 0, align 4
@test_days = common dso_local global i32 0, align 4
@day_of_week_tests = common dso_local global i32 0, align 4
@test_x509_time_print = common dso_local global i32 0, align 4
@x509_print_tests = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = load i32, i32* @test_x509_cmp_time_current, align 4
  %2 = call i32 @ADD_TEST(i32 %1)
  %3 = load i32, i32* @test_x509_cmp_time, align 4
  %4 = load i32, i32* @x509_cmp_tests, align 4
  %5 = call i32 @OSSL_NELEM(i32 %4)
  %6 = call i32 @ADD_ALL_TESTS(i32 %3, i32 %5)
  %7 = load i32, i32* @test_x509_time, align 4
  %8 = load i32, i32* @x509_format_tests, align 4
  %9 = call i32 @OSSL_NELEM(i32 %8)
  %10 = call i32 @ADD_ALL_TESTS(i32 %7, i32 %9)
  %11 = load i32, i32* @test_days, align 4
  %12 = load i32, i32* @day_of_week_tests, align 4
  %13 = call i32 @OSSL_NELEM(i32 %12)
  %14 = call i32 @ADD_ALL_TESTS(i32 %11, i32 %13)
  %15 = load i32, i32* @test_x509_time_print, align 4
  %16 = load i32, i32* @x509_print_tests, align 4
  %17 = call i32 @OSSL_NELEM(i32 %16)
  %18 = call i32 @ADD_ALL_TESTS(i32 %15, i32 %17)
  ret i32 1
}

declare dso_local i32 @ADD_TEST(i32) #1

declare dso_local i32 @ADD_ALL_TESTS(i32, i32) #1

declare dso_local i32 @OSSL_NELEM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
